# GoodAds

./: README.md  package-lock.json  package.json  tailwind.config.mjs
app/: page.jsx
client/: package-lock.json  package.json  tailwind.config.mjs
client/app/: globals.css  layout.jsx  page.jsx
client/app/landing/: page.jsx
client/app/login/: page.jsx
client/components/: footer.jsx  header.jsx  intro.jsx  wwd.jsx
components/: header.jsx  mobileNav.jsx
components/ui/: button.jsx
server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/alembic/: README.md  env.py
server/app/: main.py
server/app/api/v1/: __init__.py
server/app/api/v1/endpoints/: auth.py  business.py  projects.py  societies.py
server/app/core/: config.py  deps.py  security.py
server/app/crud/: __init__.py  crud_business.py  crud_projects.py  crud_society.py  society.py
server/app/db/: base.py  base_class.py  init_db.py  session.py
server/app/models/: __init__.py  business.py  project.py  society.py  user.py
server/app/schemas/: business.py  projects.py  society.py  user.py
server/tests/: test_societies.py
